app/public/stylesheet/notifModal.css
#notif-modal {
    border-radius: 5px;
}

#notif-modal .modal-header {
    height: 49px;
    background-color: #212225;
}

#notif-modal .modal-header p {
    font-weight: 700;
    font-style: normal;
    font-size: 16px;
    color: #ffffff;
    margin-top: 0;
    padding-top: 14px;
    text-align: center;
}

#notif-modal .modal-header a {
    font-weight: 700;
    font-size: 14px;
    color: #ffffff;
    position: absolute;
    top: 0;
    right: 0;
    margin: 5px;
}

#notif-modal #content {
    padding: 16px 32px 0px;
}

#notif-modal .modal-content .row {
    margin-bottom: 0;
}

#notif-modal .modal-content .input-field {
    margin-top: 0;
}

#notif-modal .modal-content .dropdown-content li>span {
    color: #f89920;
}

#notif-modal .modal-content select, #notif-modal .modal-content textarea {
    border: 1px solid #000000;
    border-radius: 5px;
}

#notif-modal .modal-content textarea:focus {
    box-shadow: none;
    border: 1px solid #f89920
}

#notif-modal .modal-content .materialize-textarea {
    padding: 15px;
    margin-bottom: 0;
}

#notif-modal .modal-content #message {
    min-height: 210px;
}

#notif-modal .modal-content a {
    color: #000000;
    text-decoration: underline;
    cursor: pointer;
}

#notif-modal .modal-content label {
    color: #000000;
}

#notif-modal .modal-content input[type="text"] {
    border-bottom: 1px solid #000000;
}

#notif-modal .modal-content input[type="text"]:focus {
    box-shadow: none;
    border-bottom: 1px solid #f89920;
}

#notif-modal .modal-content input[type="checkbox"].filled-in:checked+span:not(.lever):after {
    border: 2px solid #f89920;
    background-color: #f89920;
}

#notif-modal .modal-footer {
    padding: 0px 32px 18px;
}

#notif-modal .modal-footer a {
    font-weight: 700;
    font-style: normal;
    font-size: 16px;
    width: 175px;
    text-align: center;
}

#notif-modal .modal-footer #cancel-btn {
    color: #ff0000;
    border-radius: 30px;
    border: 1px solid #ff0000;
    float: left;
}

#notif-modal .modal-footer #add-btn {
    color: #000000;
    border-radius: 30px;
    background-color: #cbcb2b;
    float: right;
}

.timepicker-digital-display {
    background-color: #f89920;
}

.timepicker-canvas-bg, .timepicker-canvas-bearing {
    fill: #f89920;
}

.timepicker-canvas line {
    stroke: #f89920;
}

.timepicker-close {
    color: #f89920;
}

.datepicker-date-display {
    background-color: #f89920;
}

.datepicker-cancel, .datepicker-done {
    color: #f89920;
}

.datepicker-table td.is-today {
    color: #f89920;
}

.datepicker-table td.is-selected {
    background-color: #f89821;
}

